--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@react-navigation/native-stack": "^6.9.0",
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^1.8.5",
+    "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
     "expo": "^49.0.0",
     "expo-camera": "~13.4.4",
     "expo-device": "~5.4.0",
@@ -32,10 +34,12 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-config": "^1.5.1",
     "react-native-paper": "^5.11.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.0.2",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.0.2",
