--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/netinfo": "9.3.10",
+    "@react-native-community/slider": "^4.5.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
@@ -21,9 +22,10 @@
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "expo": "^49.0.0",
-    "expo-camera": "~13.4.4",
+    "expo-barcode-scanner": "^12.7.0",
+    "expo-camera": "^13.6.0",
     "expo-device": "~5.4.0",
-    "expo-image-picker": "~14.3.2",
+    "expo-image-picker": "^14.5.0",
     "expo-localization": "~14.3.0",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.17",
