update rerender camera homeScreen

--- a/app.json
+++ b/app.json
@@ -30,19 +30,19 @@
       [
         "expo-image-picker",
         {
-          "photosPermission": "The app accesses your photos to let you share them with your friends."
+          "photosPermission": "The app accesses your photo to let you scan the QR contained in it."
         }
       ],
       [
         "expo-barcode-scanner",
         {
-          "cameraPermission": "Allow $(PRODUCT_NAME) to access camera."
+          "cameraPermission": "Allow QR Place to access camera."
         }
       ],
       [
         "expo-camera",
         {
-          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera."
+          "cameraPermission": "Allow QR Place to access your camera."
         }
       ]
     ],
