--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-updates": "~0.18.17",
     "i18n-js": "^4.1.1",
     "lottie-react-native": "5.1.6",
+    "moment": "^2.30.1",
     "native-base": "^3.4.15",
     "react": "18.2.0",
     "react-dom": "18.2.0",
