--- a/app.json
+++ b/app.json
@@ -11,17 +11,27 @@
       "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.hpcc.expo-redux-template"
+      "bundleIdentifier": "com.hpcc.expo-redux-template",
+      "infoPlist": {
+        "NSCameraUsageDescription": "Allow QR Place to access camera.",
+        "NSMicrophoneUsageDescription": "Allow $(PRODUCT_NAME) to access your microphone"
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "package": "com.hpcc.expo_redux_template"
+      "package": "com.hpcc.expo_redux_template",
+      "permissions": [
+        "android.permission.RECORD_AUDIO",
+        "android.permission.CAMERA"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -49,6 +59,10 @@
     "runtimeVersion": {
       "policy": "sdkVersion"
     },
-    "extra": {}
+    "extra": {
+      "eas": {
+        "projectId": "7f48ce6c-b5c4-4897-ac68-871bd43750ec"
+      }
+    }
   }
 }
