--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/netinfo": "9.3.10",
-    "@react-native-community/slider": "^4.5.0",
+    "@react-native-community/slider": "4.4.2",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.0",
@@ -22,13 +22,13 @@
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "expo": "^49.0.0",
-    "expo-barcode-scanner": "^12.7.0",
-    "expo-camera": "^13.6.0",
+    "expo-barcode-scanner": "~12.5.3",
+    "expo-camera": "~13.4.4",
     "expo-device": "~5.4.0",
-    "expo-image-picker": "^14.5.0",
+    "expo-image-picker": "~14.3.2",
     "expo-localization": "~14.3.0",
     "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.17",
+    "expo-updates": "~0.18.18",
     "i18n-js": "^4.1.1",
     "lottie-react-native": "5.1.6",
     "moment": "^2.30.1",
@@ -52,7 +52,6 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
-    "@types/react-native": "~0.69.1",
     "@types/react-native-vector-icons": "^6.4.18",
     "babel-plugin-module-resolver": "^4.1.0",
     "typescript": "^5.1.3"
